@@ -2,6 +2,12 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.5.0 ]---------------
 
+2006-02-10  Erik Grinaker <erikg@codepoet.no>
+
+	* added mman module
+
+	* call mlockall() to ensure memory is never swapped to disk
+
 2006-02-08  Erik Grinaker <erikg@codepoet.no>
 
 	* cleaned up preferences dialog
